# saev

./: .gitignore  AGENTS.md  BUG_REPORT.md  CITATION.cff  CONTRIBUTING.md  README.md  REGRESSIONS.md  justfile  pyproject.toml  train.py  visuals.py
configs/preprint/: baseline.toml
contrib/: one-pager-template.typ
contrib/birdsong/: launch.py  logbook.md  pyproject.toml
contrib/birdsong/notebooks/: 001_explore.py  birdset.py  clips.py
contrib/birdsong/scripts/: make_html.py
contrib/birdsong/src/birdsong/: visuals.py
contrib/birdsong/sweeps/001_explore/: inference.py  train.py
contrib/freshwater_fish/: README.md  brief.typ  logbook.md
contrib/mimics/: README.md  launch.py  logbook.md  pyproject.toml  spec.md
contrib/trait_discovery/: .gitignore  CONTRIBUTING.md  README.md  baselines.py  cub200sweep.toml  dump_cub200_scores.py  eval_cub200.py  eval_fishvista.py  fit_baselines.py  logbook.md  notebook.py  pyproject.toml  supervised_fishvista.py  train_baseline.py
docs/: index.html  mkdocs.yml
docs/api/: 404.html  index.html  index.js  llms.txt  objects.inv  search.html  sitemap.xml
docs/issues/: probe1d-performance.md
docs/research/: logbook.md
docs/src/: index.md
examples/: inference.ipynb  inference.py
notebooks/: activations.py  plots.py  tables.py
scripts/: activations.py  benchmark.py  convert_scene_categories_to_csv.py  docs.py  export_notebook.py  inference.py  launch.py  sae.py  shards.py  toy_model.py  toy_validation_test.py
src/saev/: disk.py  (+11 more)
tests/: benchmark.py  conftest.py  outdated_test_training.py  test_auxk.py  test_axis_dim_bug.py  test_batch_limiter.py  test_bird_mae.py  test_config.py  test_configs.py  test_dataloader.py  test_decode_shape_bug.py  test_disk.py  test_framework_inference.py  test_framework_train.py  test_helpers.py  test_img_folder.py  test_img_seg_folder.py  test_indexed_dataset.py  test_iterable_dataloader.py  test_nn_activations.py  test_nn_modeling.py  test_nn_objectives.py  test_ops.py  test_ordered_dataloader.py  test_patch_filtering.py  test_reservoir_buffer.py  test_resevoir_buffer.py  test_ring_buffer.py  test_shard_validation.py  test_shards_disk.py  test_shards_math.py  test_shards_properties.py  test_shards_seg.py  test_shuffled_dataloader.py  test_shuffled_patch_filtering.py  test_unfold.py  test_utils_monitoring.py  test_utils_statistics.py  test_visuals.py  test_viz.py  (+6 more)
(+382 files in other folders)
